etcd服务使用docker-compose实现. 生成ca证书文件脚本优化,后期应该用py配合web界面来实现.并提供相关的api接口.

--- a/domposeYml.d/test/t0/mydomposeYaml.yml
+++ b/domposeYml.d/test/t0/mydomposeYaml.yml
@@ -11,8 +11,8 @@ services:
     ports:
       - "1234:5001"
     build:
-      context: .
-      dockerfile: ./src/file.df
+      context: ../..
+      dockerfile: src/file.df
       args:
         arg1: 1
         arg2: 2
