--- a/testContext/t1/dockerfile.df
+++ b/testContext/t1/dockerfile.df
@@ -1,10 +1,22 @@
-FROM python:3.7-alpine
-#告诉用户,应用暴露的端口是5001, 如果使用的-P 参数,也会自动分配宿主机随机端口映射到这个声明的端口.
-EXPOSE 5001 6001
-#建立一层构建过程,产生一层镜像4
+FROM python:3.7-alpine as pyenv
+#建立一层构建过程,产生一层镜像4 (cache)
+#避免多次重复下载
 RUN pip install flask
+
+FROM baseflask:latest as
+
+
+
+#告诉用户,应用暴露的端口是5001, 如果使用的-P 参数,也会自动分配宿主机随机端口映射到这个声明的端口.
+EXPOSE 5001
+
+WORKDIR /data
+LABEL "name"="test-docker-py" "autherSite"="https://www.thesunboy.com" "autherName"="hx940929" "desc"="这是用来批量创建测试docker镜像的."
+LABEL "version"="v1.0"
+CMD ["python","/data/app.py"]
+
 #构建时使用的上下文路径须是testContext/t1/
 ADD ./appfile/* /data/
-WORKDIR /data
+ADD http://localhost:5001/down /data/file.txt
 
-CMD ["python","/data/app.py"]
+
